# cpp-debug-mcp

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
src/cpp_debug_mcp/: __init__.py  __main__.py  server.py
src/cpp_debug_mcp/analysis/: correlator.py
src/cpp_debug_mcp/gdb/: controller.py  session.py
src/cpp_debug_mcp/lsp/: client.py  protocol.py  session.py
src/cpp_debug_mcp/tools/: combined_tools.py  fmt.py  gdb_tools.py  lsp_tools.py
tests/: conftest.py  test_gdb_controller.py  test_lsp_client.py  test_tools_combined.py  test_tools_gdb.py  test_tools_lsp.py
tests/fixtures/: Makefile  sample.cpp  segfault.cpp
