[project]
name = "cpp-debug-mcp"
version = "0.1.1"
description = "Claude Code MCP server for C++ debugging with GDB and clangd"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "William-An"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "fastmcp>=2.0",
    "pygdbmi>=0.11",
]

[project.urls]
Homepage = "https://github.com/William-An/cpp-debug-mcp"
Repository = "https://github.com/William-An/cpp-debug-mcp"
Issues = "https://github.com/William-An/cpp-debug-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
